# zernike

./: .gitignore  README.md  pyproject.toml
data/: sampled_beam.txt
src/zernike/: __main__.py
src/zernike/apps/: convert.py  estimate_beam.py  extract_kernel_from_npz.py  kernel_from_npz.py  plot_aberration.py
src/zernike/operations/: aberration.py  fit_kernel.py  kernel.py  pipeline.py  zernike.py
src/zernike/utils/: conversions.py  kernel_from_npz.py  npz.py  txt.py
